--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "devDependencies": {
     "@byodian/eslint-config-basic": "^0.1.5",
     "eslint": "^8.31.0",
-    "stylelint": "^14.16.0",
-    "stylelint-config-byodian": "*"
+    "stylelint": "^14.16.0"
   }
 }
